// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OmniBridgeAPI Integration Tests > findOmniTransfers > should fetch transfers for a specific transaction 1`] = `
[
  {
    "claimed": null,
    "fast_finalised": null,
    "fast_finalised_on_near": null,
    "finalised": null,
    "finalised_on_near": null,
    "id": {
      "kind": {
        "Nonce": 1,
      },
      "origin_chain": "Near",
    },
    "initialized": {
      "NearReceipt": {
        "block_height": 137141103,
        "block_timestamp_seconds": 1736635744,
        "transaction_hash": "DQM4d3B6Jxr4qnvGay4bpZ7aTQQogpUgQxVLAVWk5doF",
      },
    },
    "signed": null,
    "transfer_message": {
      "amount": 10000n,
      "fee": {
        "fee": 20n,
        "native_fee": 10n,
      },
      "msg": "",
      "recipient": "base:0xcf6462b9fce5af3e6c660c83453eca18ff468773",
      "sender": "near:frolik.near",
      "token": "near:wrap.near",
    },
    "updated_fee": [],
    "utxo_transfer": null,
  },
]
`;

exports[`OmniBridgeAPI Integration Tests > getAllowlistedTokens > should return consistent data structure 1`] = `
{
  "1f9840a85d5af5bf1d1762f925bdaddc4201f984.factory.bridge.near": "eth:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984",
  "2260fac5e5542a773aa44fbcfedf7c193bc2c599.factory.bridge.near": "eth:0x2260fac5e5542a773aa44fbcfedf7c193bc2c599",
  "6b175474e89094c44da98b954eedeac495271d0f.factory.bridge.near": "eth:0x6b175474e89094c44da98b954eedeac495271d0f",
  "a0b86991c6218b36c1d19d4a2e9eb0ce3606eb48.factory.bridge.near": "eth:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
  "aaaaaa20d9e0e2461697782ef11675f668207961.factory.bridge.near": "eth:0xaaaaaa20d9e0e2461697782ef11675f668207961",
  "arb.omdep.near": "eth:0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "base.omdep.near": "eth:0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "eth.bridge.near": "eth:0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2",
  "nbtc.bridge.near": "eth:0x2260fac5e5542a773aa44fbcfedf7c193bc2c599",
  "sol.omdep.near": "sol:So11111111111111111111111111111111111111112",
  "token.publicailab.near": "near:token.publicailab.near",
  "token.sweat": "near:token.sweat",
  "wrap.near": "near:wrap.near",
  "zec.omft.near": "eth:0x4a64515e5e1d1073e83f30cb97bed20400b66e10",
}
`;

exports[`OmniBridgeAPI Integration Tests > getTransfer > should fetch transfer details for a known transfer 1`] = `
[
  {
    "claimed": null,
    "fast_finalised": null,
    "fast_finalised_on_near": null,
    "finalised": {
      "EVMLog": {
        "block_height": 26239591,
        "block_timestamp_seconds": 1739268529,
        "transaction_hash": "0xf802fcc209d7d3bbb6b90393c06f3c821b34a9d1c3b2beb42cd1e7468ea1cfce",
      },
    },
    "finalised_on_near": null,
    "id": {
      "kind": {
        "Nonce": 22,
      },
      "origin_chain": "Near",
    },
    "initialized": {
      "NearReceipt": {
        "block_height": 139475752,
        "block_timestamp_seconds": 1739268494,
        "transaction_hash": "7wLmrkv9K85aWT8KKEn7roAyFwTT4FS3ZrdUMvxLkym8",
      },
    },
    "signed": null,
    "transfer_message": {
      "amount": 1000000000000000000000n,
      "fee": {
        "fee": 0n,
        "native_fee": 3483371056966369000000n,
      },
      "msg": "",
      "recipient": "base:0xd51c5283b8727206bf9be2b2db4e5673efaf519c",
      "sender": "near:marior.near",
      "token": "near:burn-1411.meme-cooking.near",
    },
    "updated_fee": [],
    "utxo_transfer": null,
  },
]
`;

exports[`OmniBridgeAPI Integration Tests > getTransferStatus > should fetch status for a known transfer 1`] = `
[
  "Initialized",
]
`;
